--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   "homepage": "https://github.com/josharrowsmith/skatepark-scraper#readme",
   "dependencies": {
     "cron": "^1.7.1",
+    "dotenv": "^8.0.0",
+    "firebase": "^5.9.0",
+    "geofirestore": "^3.2.2",
     "jsonfile": "^5.0.0",
     "puppeteer": "^1.11.0",
-    "request": "^2.88.0",
-    "firebase": "^5.9.0",
-    "geofirestore": "^3.2.2"
+    "request": "^2.88.0"
   }
 }
