--- a/functions/package.json
+++ b/functions/package.json
@@ -9,8 +9,11 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.2.0"
+    "@google-cloud/storage": "^1.7.0",
+    "cors": "^2.8.4",
+    "firebase-admin": "~5.4.2",
+    "firebase-functions": "^2.2.0",
+    "uuid-v4": "^0.1.0"
   },
   "private": true
 }
