--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "cron": "^1.7.1",
     "dotenv": "^8.0.0",
     "firebase": "^5.9.0",
-    "geofirestore": "^3.2.2",
+    "geofirestore": "^3.3.1",
+    "image-to-base64": "^2.0.1",
     "jsonfile": "^5.0.0",
+    "node": "^12.3.1",
+    "node-fetch": "^2.6.0",
     "puppeteer": "^1.11.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "stable": "^0.1.8"
   }
 }
