--- a/functions/package.json
+++ b/functions/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^1.7.0",
+    "child-process-promise": "^2.2.1",
     "cors": "^2.8.4",
     "firebase-admin": "~5.4.2",
     "firebase-functions": "^2.2.0",
+    "node": "^12.8.0",
     "uuid-v4": "^0.1.0"
   },
   "private": true
