--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "cron": "^1.7.1",
     "dotenv": "^8.0.0",
     "firebase": "^6.1.0",
+    "fs-extra": "^8.1.0",
     "geofirestore": "^3.3.1",
     "grpc": "^1.21.1",
+    "image-to-base64": "^2.0.1",
     "jsonfile": "^5.0.0",
-    "node": "^12.3.1",
+    "node": "^10.16.2",
     "node-fetch": "^2.6.0",
     "puppeteer": "^1.11.0",
-    "image-to-base64": "^2.0.1"
+    "sharp": "^0.23.0"
   }
 }
