--- a/functions/package.json
+++ b/functions/package.json
@@ -8,16 +8,20 @@
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
-  "dependencies": {
-    "@google-cloud/storage": "^1.7.0",
-    "cors": "^2.8.4",
-    "firebase-admin": "^8.3.0",
-    "firebase-functions": "^3.2.0",
-    "node": "^12.8.0",
-    "uuid-v4": "^0.1.0"
-  },
   "engines": {
     "node": "8"
+  },
+  "dependencies": {
+    "@google-cloud/storage": "^4.3.0",
+    "algoliasearch": "^3.35.1",
+    "firebase-admin": "^8.6.0",
+    "firebase-functions": "^3.3.0",
+    "fs-extra": "^8.1.0",
+    "sharp": "^0.24.0",
+    "uuid-v4": "^0.1.0"
+  },
+  "devDependencies": {
+    "firebase-functions-test": "^0.1.6"
   },
   "private": true
 }
