--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,8 @@
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
     "fs-extra": "^8.1.0",
+    "geofirestore": "^3.4.1",
+    "node-fetch": "^2.6.0",
     "sharp": "^0.24.0",
     "uuid-v4": "^0.1.0"
   },
