--- a/functions/package.json
+++ b/functions/package.json
@@ -18,7 +18,8 @@
     "firebase-admin": "^8.13.0",
     "firebase-functions": "^3.7.0",
     "fs-extra": "^8.1.0",
-    "uuid-v4": "^0.1.0"
+    "uuid-v4": "^0.1.0",
+    "firebase-tools": "^8.9.0"
   },
   "private": true
 }
